# mod-auth-openidc-dist

./: .gitignore  Makefile  Makefile.inc  README.md  autogen.sh  configure.ac
centos/: build.cjose  build.inc  build.mod_auth_openidc  build.mod_token_binding  cjose.spec  cjose.spec.inc  install.cjose  install.mod_auth_openidc  install.mod_token_binding  mod_auth_openidc.spec.inc  mod_token_binding.spec.inc
centos/6/: Dockerfile.include  centos6.inc
centos/6-i386/: centos6-i386.inc
centos/6-i386/run/: Dockerfile  Dockerfile.in
centos/6/run/: 000-default.conf  Dockerfile  Dockerfile.in
centos/7/: centos7.inc
centos/7/run/: 000-default.conf  Dockerfile  Dockerfile.in
debian/: build.cjose  build.inc  build.mod_auth_openidc  install.cjose  install.mod_auth_openidc
debian/jessie/: jessie.inc
debian/jessie/run/: Dockerfile  Dockerfile.in
debian/stretch/: stretch.inc
debian/stretch/run/: Dockerfile  Dockerfile.in  Makefile
debian/wheezy/: wheezy.inc
debian/wheezy/run/: Dockerfile  Dockerfile.in
ubuntu/artful/run/: Dockerfile.in
ubuntu/precise/run/: Dockerfile  Dockerfile.in  default
ubuntu/trusty/: trusty.inc
ubuntu/trusty/run/: Dockerfile  Dockerfile.in  Makefile
ubuntu/utopic/run/: Dockerfile
ubuntu/vivid/run/: Dockerfile  Dockerfile.in
ubuntu/wily/: wily.inc
ubuntu/wily/run/: Dockerfile  Dockerfile.in
ubuntu/xenial/: xenial.inc
ubuntu/xenial/run/: Dockerfile  Dockerfile.in
ubuntu/yakkety/run/: Dockerfile.in
ubuntu/zesty/run/: Dockerfile.in  Makefile
